--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@
         </div>
     </div>
     <div class="footer">
-        <i class="fa fa-brands fa-whatsapp icon" id="whatsapp"></i>
-        <i class="fa fa-solid fa-envelope icon" id="mail"></i>
-        <i class="fa fa-brands fa-instagram icon" id="insta"></i>
-        <i class="fa fa-brands fa-linkedin icon" id="link"></i>
+        <a href="https://wa.me/+919037955382" target="_blank" style="text-decoration: none;">
+            <i class="fa fa-brands fa-whatsapp icon" id="whatsapp"></i>
+        </a>
+        <a href="mailto: ajithshine@cectl.ac.in" target="_blank" style="text-decoration: none;">
+            <i class="fa fa-solid fa-envelope icon" id="mail"></i>
+        </a>
+        <a href="https://www.instagram.com/_ajith_shine/" target="_blank" style="text-decoration: none;">
+            <i class="fa fa-brands fa-instagram icon" id="insta"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/ajith-shine-1839581a0/" target="_blank" style="text-decoration: none;">
+            <i class="fa fa-brands fa-linkedin icon" id="link"></i>
+        </a>
     </div>
 </body>
 </html>
