--- a/second.html
+++ b/second.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/fe572a67e8.js"></script> 
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="second.css">
     <title>Agt</title>
 </head>
 <body>
@@ -120,6 +120,5 @@
             </a>
         </div>        
     </div>
-    <script src="/about.js"></script>
 </body>
 </html>
