--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
 <body>
     <div class="outer">
         <div class="container1">
-            <img src="/pic1.jpg" alt="photo" class="photo">
+            <img src="./pic1.jpg" alt="photo" class="photo">
             <p class="photo_content">A Computer science student, intrested
                 in solving problems and building
                 excellent solutions to it. I am
@@ -42,63 +42,63 @@
             <div><p class="cert_heading">Certifictes</p></div>
             <div class="cert_body">
                 <div class="cert">
-                    <img src="/certificates/Topsy_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/Topsy_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Web designing competition</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/web design_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/web design_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Web designing competition</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/Xtreme_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/Xtreme_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">IEEE Xtreme 2019</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/meme 2nd prize.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/meme 2nd prize.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">MEME making</p>
                 </div>
                 <div class="cert">
-                    <video src="/certificates/100" class="cert_image"></video>
+                    <video src="./certificates/100" class="cert_image"></video>
                     <p class="cert_description">100 canva template</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/hack_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/hack_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Hackathon</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/devfest_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/devfest_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Devfest 2021</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/matlab_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/matlab_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Matlab workshop</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/neo_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/neo_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">NEO ambassador</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/credorian_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/credorian_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Hackathon</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/web inter_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/web inter_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Web development internship</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/DSheap.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/DSheap.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">workshop on Data Structures Heap</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/Ctf.png" alt="topsy" class="cert_image">
+                    <img src="./certificates/Ctf.png" alt="topsy" class="cert_image">
                     <p class="cert_description">Hackathon</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/aksc_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/aksc_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">IEEE conference</p>
                 </div>
                 <div class="cert">
-                    <img src="/certificates/treasure 1_1.jpg" alt="topsy" class="cert_image">
+                    <img src="./certificates/treasure 1_1.jpg" alt="topsy" class="cert_image">
                     <p class="cert_description">Treasure hunt</p>
                 </div>
                 
